# wgpu-travel

./: Cargo.toml  README.md
assets/: shader.wgsl
dictation/: Cargo.toml
dictation/src/: main.rs
dictation/src/app/: process_entry.rs  state.rs
dictation/src/event/: handle.rs
dictation2/: Cargo.toml
dictation2/src/: app.rs  atom.rs  config.rs  handle.rs  main.rs  process_atom.rs  ready.rs  state_handle.rs
dictation2/src/atom/: config.rs  ready.rs
dictation2/src/config/: event_loop.rs
dictation2/src/ready/: event_loop.rs  window.rs
dictation3/: Cargo.toml
dictation3/src/: atom.rs  config.rs  group.rs  handle.rs  layout.rs  main.rs  ready.rs  rear_asset.rs  scheduler.rs
dictation3/src/asset/: texture.rs
dictation3/src/atom/: adapter.rs  app.rs  event_storage.rs
dictation3/src/config/: surface.rs
dictation3/src/group/: pipeline.rs  texture.rs
dictation3/src/layout/: pipeline.rs  texture.rs
dictation3/src/ready/: adapter.rs  app.rs  event_storage.rs  render_pass.rs  surface.rs  wgpu_instance.rs  window.rs
dictation3/src/rear_asset/: obj_instance.rs
dictation4/: Cargo.toml  readme.md
dictation4/src/: main.rs
share/: readme.md  wgpu.excalidraw
source_course/: Cargo.toml
source_course/src/: ammo.rs  camera.rs  camera_ctrl.rs  depth_stencil.md  lib.rs  main.rs  state.rs
src/: action.rs  ammo.rs  app_event_handles.rs  bind!.md  camera.rs  for_state.rs  instance.rs  lib.rs  main.rs  model.rs  schema.rs  state.rs  texture.rs
src/dictation/: app.rs  event.rs  mod.rs  my.rs  state.rs  surface.rs  wgpu_instance.rs  window.rs
(+44 files in other folders)
