[package]
name = "dictation4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.5"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.24"
futures = "0.3.29"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
